--- a/css/styles.css
+++ b/css/styles.css
@@ -310,7 +310,8 @@ body {
 .category-header img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: cover !important;
+  object-position: bottom !important;
   display: block;
 }
 
